--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,10 +10,10 @@
 </div>
 
 <div id="login">
-    <form id="login-submit">
+    <form action="/login" method="POST" id="login-submit">
         <label>Login</label>
-        <input type="text" name="login-username" id="login-username" required>
-        <input type="password" name="login-password" id="login-password" required>
+        <input type="text" name="username" id="login-username" required>
+        <input type="password" name="password" id="login-password" required>
         <input type="submit" value="Submit">
     </form>
 </div>
