--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,6 +1,27 @@
 
 <h1>ADMINNSSSS</h1>
 
-<h1 id="clock" data-name="America/NewYork" data-tz="{{{result.tz}}}"></h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+            <div class="row">
+                <div class="col-lg-12">
+                    <form action="/create" method="POST">
+                        <label>Name of the city to add</label>
+                            <input type="text" name="city">
+                        <label>What country does it belong to?</label>
+                            <select name="country">
+                                {{!-- {{#each}} --}}
+                                {{!-- <option value="{{db.country}}">{{db.country}}</option> --}}
+                                {{!-- {{/each}} --}}
+                            </select>
+                        
 
-<script src="js/clock.js"></script>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
+</div>
