--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,13 @@
 
-<div id="signup">
-    <form id="admin-submit">
-        <label>signup</label>
-        <input type="text" name="signup-username" id="username" required>
-        <input type="text" name="signup-email" id="email" required>
-        <input type="password" name="signup-password" id="password" required>
-        <input type="submit" value="Submit">
-    </form>
-</div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <form action="/create" method="POST">
-                <input type='text' name="city">
-                <input type="text" name="tz">
-                <input type="submit" value="Submit">
-            </form>
-        </div>
-    </div>
-</div>
+    <title>World View</title>
+</head>
+<body>
+    <object type="image/svg+xml" data="images/worldMap.svg" class="logo">
+        The world!!!!
+        <!-- fallback image in CSS -->
+    </object>
+</body>
+</html>
 
 <h1 id="clock" data-name="America/NewYork" data-tz="{{dataValues.timezone}}">{{dataValues.timezone}}</h1>
 
