adding responsive function to map

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,8 @@
-
+    <link rel="stylesheet" href="css/index.css">
     <title>World View</title>
 </head>
 <body>
-    <object type="image/svg+xml" data="images/worldMap.svg" class="logo">
+    <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo">
         The world!!!!
         <!-- fallback image in CSS -->
     </object>
