--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -24,10 +24,18 @@
             <div class="col-lg-8">
                 <div class="row">
                     <div class="col-lg-12">
-                        
+
                         <div id="header-div">
                             <h1 id="admin-header">Admin Control Panel</h1>
                         </div>
+
+                        <form action="/countries" method="POST">
+                        
+                            <input type="text" name="continent">
+                            
+                            <input type="submit" value="Submit">
+
+                        </form>
 
                         <div id="city-div">
 
