--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,34 @@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
     <title>World View</title>
 </head>
 <body>
+    <div id="mapModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Plan your perfect trip!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Click on the continent you're interested in visiting to explore the countries within!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Let's explore!</button>
+        </div>
+    </div>
+  </div>
+</div>
+
     <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo">
         The world!!!!
         <!-- fallback image in CSS -->
     </object>
+
+<script src="js/worldMap.js"></script>
 </body>
-</html>
 
-<h1 id="clock" data-name="America/NewYork" data-tz="{{dataValues.timezone}}">{{dataValues.timezone}}</h1>
 
-<script src="js/clock.js"></script>
-<script src="js/admin.js"></script>
