adding all country images

--- a/views/cities.handlebars
+++ b/views/cities.handlebars
@@ -1,13 +1,14 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 </head>
 <body>
 
-<div class="parallax" style="background-image: url('img/london.jpg')">
+<div class="parallax" style="background-image: url('img/Ecuador.jpg')">
     <div class="cityHeader">
         <h1>LONDON</h1>
     </div> 
