--- a/views/cities.handlebars
+++ b/views/cities.handlebars
@@ -1,15 +1,16 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 </head>
 <body>
 
-<div class="parallax" style="background-image: url('img/london.jpg')">
+<div class="parallax" style="background-image: url('img/United Kingdom.jpg')">
     <div class="cityHeader">
-        <h1>LONDON</h1>
+        <h1>United Kingdom</h1>
     </div> 
 </div>
 <div class="info p-5" style="background-image: url('img/extra_clean_paper.png'">
@@ -17,9 +18,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis aliquid quaerat nobis laboriosam iusto corrupti! Exercitationem sit, sunt optio temporibus quae non aliquid minima. Aliquam dicta minima nihil dolores molestiae!</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum laboriosam saepe vel totam, voluptate praesentium culpa odit amet aperiam? Neque porro temporibus maiores similique laborum sapiente, in obcaecati aut quasi.</p>
 </div>
-<div class="parallax" style="background-image: url('img/paris.jpg')">
+<div class="parallax" style="background-image: url('img/France.jpg')">
     <div class="cityHeader">
-        <h1>PARIS</h1>
+        <h1>France</h1>
     </div> 
 </div>
 <div class="info p-5" style="background-image: url('img/extra_clean_paper.png'">
@@ -27,9 +28,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis aliquid quaerat nobis laboriosam iusto corrupti! Exercitationem sit, sunt optio temporibus quae non aliquid minima. Aliquam dicta minima nihil dolores molestiae!</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum laboriosam saepe vel totam, voluptate praesentium culpa odit amet aperiam? Neque porro temporibus maiores similique laborum sapiente, in obcaecati aut quasi.</p>
 </div>
-<div class="parallax" style="background-image: url('img/rome.jpg')">
+<div class="parallax" style="background-image: url('img/Italy.jpg')">
     <div class="cityHeader">
-        <h1>ROME</h1>
+        <h1>Italy</h1>
     </div> 
 </div>
 <div class="info p-5" style="background-image: url('img/extra_clean_paper.png'">
