--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -14,17 +14,19 @@
 
 <body>
 
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li id="li">Countries</li>
-                <ul id="country-list">
-                    {{#each result}}
-                        <li><a href="#{{country}}">{{country}}</a></li>
-                    {{/each}}
-                </ul>
-        </ul>
-    </nav>
+    <div id="nav-box">
+    </div>
+        <nav id="navbar">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li id="li">Countries</li>
+                    <ul id="country-list">
+                        {{#each result}}
+                            <li><a href="#{{country}}">{{country}}</a></li>
+                        {{/each}}
+                    </ul>
+            </ul>
+        </nav>
 
 {{#each result}}
 
@@ -47,4 +49,5 @@
 
 {{/each}}
 
+    <script src="js/countries/nav.js"></script>
 </body>
