--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,13 +29,21 @@ body, html {
 
 .info { 
   
-    height: 100%; 
+    /* height: 100%;  */
   
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+  }
+
+  .bullets {
+    font-family: 'Anton', sans-serif;
+  }
+
+  p {
+    font-family: 'Roboto', sans-serif;
   }
   
 
