--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,54 @@
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/index.css">
-    <title>World View</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="css/index.css">
+<title>World View</title>
 </head>
 
 <body>
-    <div id="mapModal" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Plan your perfect trip!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Click on the continent you're interested in visiting to explore the countries within!</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Let's explore!</button>
+  <div id="mapModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Plan your perfect trip!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <p>Click on the continent you're interested in visiting to explore the countries within!</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Let's explore!</button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
 
-    <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo">
-        The world!!!!
-        <!-- fallback image in CSS -->
-    </object>
+  <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo">
+    The world!!!!
+    <!-- fallback image in CSS -->
+  </object>
 
-<script src="js/worldMap.js"></script>
+  <div id="footer">
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-4 columns pt-2">
+        <p>Creators:</p>
+        <p><a href="https://mcnamarakc.github.io/Bootstrap-Portfolio/" target="_blank">Kathleen McNamara</a></p>
+        <p><a href="https://pawhurr.github.io/portfolio" target="_blank">Paul Whurr</a></p>
+        <p><a href="https://heathbanner.github.io/" target="_blank">Heath Banner</a></p>
+        <p><a href="https://ruchita-g.github.io/Responsive-Portfolio" target="_blank">Ruchita Gandhe</a></p>
+      </div>
+      <div class="col-2"><p>Copywrite ©</p></div>
+      <div class="col-4 columns pt-2">
+        <p><a href="https://github.com/" target="_blank"></a>GitHub</p>
+        <p><a href="https://inkscape.org/" target="_blank">Inkscape</a></p>
+        <p><a href="https://www.tripadvisor.com/" target="_blank">TripAdvisor</a></p>
+      </div>
+      <div class="col-1"></div>
+    </div>
+
+    <script src="js/worldMap.js"></script>
 </body>
-
-
