--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 
+    <link rel="icon" type="image/png" href="images/airplane-11-32.ico" sizes="32x32" />
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
