--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,7 +41,7 @@
         <p><a href="https://heathbanner.github.io/" target="_blank">Heath Banner</a></p>
         <p><a href="https://ruchita-g.github.io/Responsive-Portfolio" target="_blank">Ruchita Gandhe</a></p>
       </div>
-      <div class="col-2"><p>Copywrite ©</p></div>
+      <div class="col-2"><p>Copyright ©</p></div>
       <div class="col-4 columns pt-2">
         <p><a href="https://github.com/" target="_blank"></a>GitHub</p>
         <p><a href="https://inkscape.org/" target="_blank">Inkscape</a></p>
