--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ h1 {
 .cityHeader {
     height: 12vh;
     background: rgb(2,0,36);
-    background: linear-gradient(216deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 3%, rgba(240,247,248,1) 100%);
+    background: linear-gradient(216deg, rgba(37,36,67,1) 0%, rgba(39,132,157,1) 3%, rgba(240,247,248,1) 100%);
     width: 100vw;
     padding: 1%;
     position: absolute;
@@ -17,15 +17,23 @@ body, html {
   }
   
 .parallax { 
-  
+    
     height: 100%; 
-  
+    
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+
+    transition: opacity 2s;
+    opacity: 1;
   }
+
+.hidden {
+    opacity: 0;
+}
+
 
 .info { 
   
@@ -45,6 +53,6 @@ body, html {
   p {
     font-family: 'Roboto', sans-serif;
   }
-  
+
 
 
