--- a/public/css/countries/navbar.css
+++ b/public/css/countries/navbar.css
@@ -1,39 +1,132 @@
 
+.colp {
+    padding: 0px;
+}
 
-
-#nav-box {
-    background: rgb(237, 53, 11, 0.8);
-    border-radius: 0px 5px 5px 0px;
-    height: 100px;
-    width: 20px;
+.toggle {
+    z-index: 100;
     position: fixed;
-    top: 30%;
-    left: 0%;
-    z-index: 2;
+    top: 4.5%;
+    left: 3.5%;
+    transform: translate(-50%, -50%);
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 10px;
 }
 
-#nav-box:hover {
-    width: 50px;
-    transition: width 0.5s;
+.toggle:hover {
+    padding: 15px;
+    transition: padding .5s ease-in-out;
 }
 
-#navbar {
-    display: none;
-    z-index: 1;
-    position: fixed;
-    top: 30%;
-    left: 0%;
-    background: rgb(237, 53, 11, 0.8);
-
+.toggle span {
+    position: relative;
+    width: 24px;
+    height: 2px;
+    display: block;
+    transition: .5s;
+    background: black;
 }
 
-nav li {
-    list-style: none;
+.span {
+    margin-bottom: 8px;
+}
+
+.toggle span:nth-child(1) {
+    transform-origin: left;
+
+}
+.toggle span:nth-child(2) {
+    transform-origin: center;
+    
+}
+.toggle span:nth-child(3) {
+    transform-origin: left;
+}
+.toggle.active span:nth-child(1) {
+    transform: rotate(45deg);
+    left: 4.5px;
+}
+.toggle.active span:nth-child(2) {
+    transform: rotate(315deg);
+    right: 0px;
+}
+.toggle.active span:nth-child(3) {
+    transform: scaleX(0);
+}
+
+.toggle.active {
+    z-index: 100;
+    transition: all 2s ease-in-out;
+}
+
+.modal {
+    z-index: 4;
+    display: block;
+    background: white;
+    left: -200%;
+}
+
+.nav-options-col {
+    border-right: 1px solid black;
+    padding: 20px;
+}
+
+#nav-options {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+}
+
+#nav-options a {
+    display: block;
+}
+
+#home-option, #home-option:visited, #about-us, #about-us:visited {
+    font-size: 24px;
     color: black;
-    text-align: left;
+    margin-bottom: 20px;
 }
 
-#country-list {
-    display: none;
+#home-option:hover, #about-us:hover {
+    color: darkgray;
+    text-decoration: none;
 }
+
+#nav-container {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100vh;
+}
+
+#country-imgs-div {
+    width: 100%;
+    height: 80%;
+    margin: 0px;
+    overflow: auto;
+    white-space: nowrap;
+    display: inline-block;
+}
+
+.country-imgs {
+    opacity: 0;
+    position: relative;
+    height: 100%;
+    width: 50%;
+    background-size: cover;
+    display: inline-block;
+    color: white;
+    margin-right: -10px
+}
+
+.nav-img-headers {
+    display: inline;
+    color: white;
+    position: absolute;
+    bottom: 0%;
+    text-align: center;    
+}
+
+
 
