--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,17 @@
+
+
 h1 {
     font-family: 'Anton', sans-serif;
 }
 .cityHeader {
     height: 12vh;
-    background: rgb(2,0,36);
-    background: linear-gradient(216deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 3%, rgba(240,247,248,1) 100%);
+    background: rgb(0,0,0, 0.5);
+    color: rgb(252, 252, 252);
+    /* background: linear-gradient(216deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 3%, rgba(240,247,248,1) 100%); */
     width: 100vw;
     padding: 1%;
     position: absolute;
     bottom: 0;
-
 }
 
 body, html {
