header countries, country header with fade

--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -26,13 +26,13 @@
                     </ul>
             </ul>
         </nav>
-
+    <h1 id="countryHeader">{{result.0.dataValues.continent}}</h1>
     {{#each result}}
 
     <div class="parallax" style="background-image: url('img/{{dataValues.country}}.jpg')">
 
         <div id="{{country}}" class="cityHeader">
-            <h1>{{country}}</h1>
+            <h2>{{country}}</h2>
         </div>
     </div>
 
