--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-h1 {
+h1, h2 {
     font-family: 'Anton', sans-serif;
 }
 .cityHeader {
     height: 12vh;
     background: rgb(2,0,36);
-    background: linear-gradient(216deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 3%, rgba(240,247,248,1) 100%);
+    background: linear-gradient(216deg, rgba(2,0,36,1) 0%, rgba(39,132,157,1) 3%, rgba(240,247,248,1) 100%);
     width: 100vw;
     padding: 1%;
     position: absolute;
@@ -14,6 +14,7 @@ h1 {
 
 body, html {
     height: 100%;
+    background-color:#27849D;
   }
   
 .parallax { 
@@ -45,6 +46,9 @@ body, html {
   p {
     font-family: 'Roboto', sans-serif;
   }
-  
+  #countryHeader {
+    text-align: center;
+    background-color:#27849D;
+  }
 
 
